// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<label
  className="container root size-18 color-sky theme-light -clickable"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
  />
</label>
`;

exports[`Switch should be rendered correctly with new props 1`] = `
<label
  className="container root size-12 color-sky theme-dark -clickable"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
  >
    Open
  </div>
</label>
`;
